--- a/src/app/store-detail/store-detail.component.html
+++ b/src/app/store-detail/store-detail.component.html
@@ -1,3 +1,4 @@
-<p>
-This store item has an id number: {{storeId}}
-</p>
+<div>
+  <h3>{{storeToDisplay.name}}</h3>
+  <h3>{{storeToDisplay.details}}</h3>
+</div>
