--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -15,12 +15,12 @@
       <input #newDetails>
     </div>
 
-    <!-- <div>
-      <label>Album Description:</label>
-      <br>
-      <textarea #newDescription></textarea>
-    </div> -->
+
     <br>
     <button class="btn btn-primary" (click)="submitForm(newName.value, newDetails.value); newName.value=''; newDetails.value=''">Add</button>
   </div>
+</div>
+
+<div>
+  <app-store></app-store>
 </div>
