add delete functionality:

--- a/src/app/edit-store/edit-store.component.html
+++ b/src/app/edit-store/edit-store.component.html
@@ -9,3 +9,4 @@
 <br>
 
 <button class="btn btn-warning" (click)="beginUpdatingStore(selectedStore)">Update</button>
+<button class="btn btn-danger" (click)="beginDeletingStore(selectedStore)">Delete</button>
